Fix resize and remove column gap for ios 14

--- a/src/styles/Level.css
+++ b/src/styles/Level.css
@@ -14,7 +14,6 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    column-gap: 3%;
 }
 
 .level-container.MuiPaper-root {
