--- a/src/styles/ScreenLetter.css
+++ b/src/styles/ScreenLetter.css
@@ -1,5 +1,5 @@
 .screenLetter-container {
-    margin: 0px;
+    margin: 0 3% 0 0;
     width: calc(90% / 8);
     height: 100%;
     max-width: 40px;
